Fix multi-value alignment on admin record show.
(#1051)

--- a/admin/themes/default/css/sass/pages/_items.scss
+++ b/admin/themes/default/css/sass/pages/_items.scss
@@ -230,7 +230,7 @@
     }
 
     .element .element-text {
-        margin: 5px 0;
+        margin-bottom: 5px;
     }
 
     .element .element-text:last-of-type:after {
